# pydastic

./: .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt  todo_checker.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: Dockerfile  README.md
pydastic/: __init__.py  error.py  model.py  pydastic.py  session.py
tests/: car.py  conftest.py  test_model.py  test_model_async.py  test_session.py  user.py
tests/test_example/: test_hello.py
